--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=10.0.0.6;Database=csi_production;User Id=syspeter;Password=sy33ere;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
