--- a/proxim.csproj
+++ b/proxim.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MySql.Data" Version="8.0.32.1" />
+      <PackageReference Include="MySqlConnector" Version="2.4.0" />
+      <PackageReference Include="MySqlConnector.DependencyInjection" Version="2.4.0" />
     </ItemGroup>
 
 </Project>
