--- a/web.config
+++ b/web.config
@@ -4,6 +4,6 @@
         <handlers>
             <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
         </handlers>
-        <aspNetCore processPath="dotnet" arguments=".\proxim.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="InProcess" />
+        <aspNetCore processPath="dotnet" arguments=".\proxim.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" hostingModel="InProcess" />
     </system.webServer>
 </configuration>
